@@ -10,6 +10,7 @@ import com.wynntils.core.components.Managers;
 import com.wynntils.core.components.Models;
 import com.wynntils.core.components.Services;
 import com.wynntils.core.persisted.config.HiddenConfig;
+import com.wynntils.features.debug.MappingProgressFeature;
 import com.wynntils.features.map.MainMapFeature;
 import com.wynntils.models.marker.type.DynamicLocationSupplier;
 import com.wynntils.models.marker.type.MarkerInfo;
@@ -25,7 +26,6 @@ import com.wynntils.utils.colors.CommonColors;
 import com.wynntils.utils.mc.KeyboardUtils;
 import com.wynntils.utils.mc.McUtils;
 import com.wynntils.utils.mc.type.Location;
-import com.wynntils.utils.mc.type.PoiLocation;
 import com.wynntils.utils.render.MapRenderer;
 import com.wynntils.utils.render.RenderUtils;
 import com.wynntils.utils.render.Texture;
@@ -249,6 +249,11 @@ public final class MainMapScreen extends AbstractMapScreen {
 
         renderMapFeatures(poseStack, mouseX, mouseY);
 
+        if (Managers.Feature.getFeatureInstance(MappingProgressFeature.class).isEnabled()) {
+            renderChunkBorders(poseStack);
+            BUFFER_SOURCE.endBatch();
+        }
+
         // Cursor
         renderCursor(
                 poseStack,
@@ -379,18 +384,22 @@ public final class MainMapScreen extends AbstractMapScreen {
                                     new Location(hovered.getLocation()),
                                     iconPoi.getIcon(),
                                     customPoi.getColor(),
-                                    customPoi.getColor());
+                                    customPoi.getColor(),
+                                    hovered.getName());
                         } else {
                             Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(
-                                    new Location(hovered.getLocation()), iconPoi.getIcon());
+                                    new Location(hovered.getLocation()), iconPoi.getIcon(), hovered.getName());
                         }
                     } else {
-                        Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(new Location(hovered.getLocation()));
+                        Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(
+                                new Location(hovered.getLocation()), hovered.getName());
                     }
                 } else {
                     final Poi finalHovered = hovered;
-                    Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(new DynamicLocationSupplier(
-                            () -> finalHovered.getLocation().asLocation()));
+                    Models.Marker.USER_WAYPOINTS_PROVIDER.addLocation(
+                            new DynamicLocationSupplier(
+                                    () -> finalHovered.getLocation().asLocation()),
+                            finalHovered.getName());
                 }
                 return true;
             }
@@ -402,7 +411,7 @@ public final class MainMapScreen extends AbstractMapScreen {
                     int gameX = (int) ((mouseX - centerX) / zoomRenderScale + mapCenterX);
                     int gameZ = (int) ((mouseY - centerZ) / zoomRenderScale + mapCenterZ);
 
-                    McUtils.mc().setScreen(PoiCreationScreen.create(this, new PoiLocation(gameX, null, gameZ)));
+                    McUtils.mc().setScreen(PoiCreationScreen.create(this, new Location(gameX, 0, gameZ)));
                 }
             } else if (KeyboardUtils.isAltDown()) {
                 if (hovered instanceof CustomPoi customPoi && !Services.Poi.isPoiProvided(customPoi)) {
@@ -438,7 +447,7 @@ public final class MainMapScreen extends AbstractMapScreen {
 
         if (shareCompass) {
             // FIXME: Find an intuitive way to share compasses with multiple waypoints
-            LocationUtils.shareCompass(target, markers.get(0).location());
+            LocationUtils.shareCompass(target, markers.getFirst().location());
         } else {
             LocationUtils.shareLocation(target);
         }
